# langchain-chainlit-docker-deployment-template

./: Dockerfile  README.md  chainlit.md  docker-compose.yml  poetry.toml  pyproject.toml
.chainlit/: config.toml
demo_app/: main.py
