[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.184"
openai = "0.27.7"
chainlit = "0.2.111"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
